<resources>
    <string name="app_name">FinderLog</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="empty_list">No items to display.</string>
    <string name="welcome">Welcome to FinderLog</string>
    <string name="app_logo">App Logo</string>
    <string name="app_is_starting">App is starting…</string>
    <string name="app_will_start">App will start in %1$d sec</string>

    <string name="name_and_id">Hava Aviv - 123456789\nAvihai Mordechay -
        318341278\nEmanuel Malloul - 987654321\nSubmission Date: May 21, 2025</string>
    <string name="found_items">Found Items</string>
    <string name="matches">Matches</string>
    <string name="lost_items">Lost Items</string>
    <string name="handbag">Handbag</string>
    <string name="bag">Bag</string>
    <string name="passport">Passport</string>
    <string name="toy">Toy</string>
    <string name="money">Money</string>
    <string name="lego">Lego</string>
    <string name="cap">Cap</string>
    <string name="clothing_details">Clothing Details</string>
    <string name="toggle_personal_items">Toggle Personal Items</string>
    <string name="clock">Clock</string>
    <string name="necklace">Necklace</string>
    <string name="bracelet">Bracelet</string>
    <string name="jewellery">Jewellery</string>
    <string name="chain">Chain</string>
    <string name="shorts">Shorts</string>
    <string name="dress">Dress</string>
    <string name="jeans">Jeans</string>
    <string name="swimwear">Swimwear</string>
    <string name="hat">Hat</string>
    <string name="scarf">Scarf</string>
    <string name="jacket">Jacket</string>
    <string name="outerwear">Outerwear</string>
    <string name="shoe">Shoe</string>
    <string name="sneakers">Sneakers</string>
    <string name="ring">Ring</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="tie">Tie</string>
    <string name="technology_items">Technology Items</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="computer">Computer</string>
    <string name="musical_instrument">Musical instrument</string>
    <string name="goggles">Goggles</string>
    <string name="glasses">Glasses</string>
    <string name="other_items">Other Items</string>
    <string name="wheel">Wheel</string>
    <string name="bicycle">Bicycle</string>
    <string name="umbrella">Umbrella</string>
    <string name="surfboard">Surfboard</string>
    <string name="poster">Poster</string>
    <string name="other">Other</string>
    <string name="lost_date">Lost date:</string>
    <string name="no_date_selected">No date selected</string>
    <string name="submit_report">Submit Report</string>
    <string name="cancel">Cancel</string>
    <string name="enter_image_title">Enter image title</string>
    <string name="retake">Retake</string>
    <string name="save">Save</string>
    <string name="open_camera">Open Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_report">Add Report</string>
    <string name="capture">Capture</string>
    <string name="close_camera">Close Camera</string>
    <string name="title">Title</string>
    <string name="client_name">Client Name</string>
    <string name="client_phone">Client Phone</string>
    <string name="select_item_categories">Select item categories:</string>
    <string name="personal_items">Personal Items</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="match_only_items_from">Match only items from:</string>
    <string name="item_image">Item image</string>
    <string name="description">Description</string>
    <string name="status_open">Status: open</string>
    <string name="found_2024_01_01">Found: 2024–01–01</string>
    <string name="delete">Delete</string>
    <string name="short_description">Short Description</string>
    <string name="status">Status</string>
    <string name="report_date">Report Date</string>
    <string name="match_title">Match Title</string>">

    <string name="status_label">Status: %1$s</string>
    <string name="found_label">Found: %1$s</string>
    <string name="reported_label">Reported: %1$s</string>
    <string name="name_label">Name: %1$s</string>
    <string name="phone_label">Phone: %1$s</string>
    <string name="lost_label">Lost: %1$s</string>
    <string name="report">Report</string>
    <string name="lost_date1">Lost Date</string>
    <string name="match_image">Image representing a found item</string>


</resources>