<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:padding="12dp">

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:visibility="gone"
            android:src="@drawable/ic_trash"
          />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@id/deleteButton"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="40dp">

            <!-- כותרת -->
            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_description"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="#555555" />

            <LinearLayout
                android:id="@+id/expandedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/itemClientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/itemClientPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_phone" />

                <TextView
                    android:id="@+id/itemStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/itemLostDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_date1" />

                <TextView
                    android:id="@+id/itemReportDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_date" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
